# streamdeploy-agent

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  Uninstall.md  go.mod
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
agent/: CMakeLists.txt  README.md  agent.cpp  agent.h  build.sh  certificate_manager.cpp  certificate_manager.h  config_manager.cpp  config_manager.h  container_manager.cpp  container_manager.h  https_client.cpp  https_client.h  main.cpp  metrics_collector.cpp  metrics_collector.h  mqtt_client.cpp  mqtt_client.h  package_manager.cpp  package_manager.h
build_container/: Dockerfile  README.md
cmd/agent/: main.go
cmd/installer/: main.go
config/: agent.json  custom_metrics.json  environment.json  scripts.json  state-with-containers.json  state.json
docs/: BASTION-README.md  DEVICE-PULL-FUNCTIONALITY.md  DEVICE-SIGNUP.md  SECRET-MANAGEMENT.md  SSH-INTEGRATION.md  ci-cd-migration.md  musl-cross-compilation.md
install/: CMakeLists.txt  README.md  build.sh  installer.cpp  streamdeploy-installer
pkg/agent/certificate/: manager.go
pkg/agent/container/: manager.go
pkg/agent/environment/: manager.go
pkg/agent/https/: client.go
pkg/agent/metrics/: collector.go
pkg/core/agent/: agent.go
pkg/core/config/: config.go
pkg/core/types/: types.go
pkg/core/utils/: logger.go
pkg/installer/: installer.go
scripts/: build.sh  install.sh  provision-secrets.sh
src/: agent.cpp  agent.h  hal.h  hal_jetson.cpp  http_client.cpp  http_client.h  main.cpp
systemd/: streamdeploy-agent.service
